added skills/tools logos, description to be changed

--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -9,11 +9,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+          
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   
   <link rel="stylesheet" href="{% static 'home/css/index.css' %}">
 
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+
   <script src="{% static 'home/scripts/effects.js' %}"></script>
 
 
@@ -90,9 +94,14 @@
 
     </section>
 
+
+
+
+
+
     <section id="my-skills">
       <div class="container px-4 py-5" id="icon-grid">
-        <h2 class="pb-2 border-bottom">My Skills</h2>
+        <h2 class="pb-2 border-bottom">My Skills and Tools</h2>
 
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4 py-5">
           <div class="col d-flex align-items-start">
@@ -100,6 +109,10 @@
               <use xlink:href="#bootstrap" />
             </svg>
             <div>
+
+              <div class="small-logo">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/java/java-original.svg" />
+              </div>
               <h4 class="fw-bold mb-0">Java</h4>
               <p>Made various Android mobile app.</p>
             </div>
@@ -110,6 +123,10 @@
               <use xlink:href="#cpu-fill" />
             </svg>
             <div>
+              
+              <div class="small-logo">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" />
+              </div>
               <h4 class="fw-bold mb-0">Python</h4>
               <p>Excels at Python 3.11 and more specifically on Automation.</p>
             </div>
@@ -121,6 +138,9 @@
               <use xlink:href="#calendar3" />
             </svg>
             <div>
+              <div class="small-logo">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/django/django-plain.svg" />
+              </div>
               <h4 class="fw-bold mb-0">Django</h4>
               <p>Made various MVC Web Apps with Django.</p>
             </div>
@@ -132,6 +152,9 @@
               <use xlink:href="#home" />
             </svg>
             <div>
+              <div class="small-logo">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original.svg" />
+              </div>
               <h4 class="fw-bold mb-0">NodeJS</h4>
               <p>Specializes in web app development that is I/O intensive.</p>
             </div>
@@ -142,6 +165,11 @@
               <use xlink:href="#speedometer2" />
             </svg>
             <div>
+
+              <div class="small-logo">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" />
+              </div>
+
               <h4 class="fw-bold mb-0">HTML5</h4>
               <p>Made different web designs in a wide array of projects.</p>
             </div>
@@ -152,6 +180,10 @@
               <use xlink:href="#toggles2" />
             </svg>
             <div>
+    
+              <div class="small-logo">
+               <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" />
+              </div>
               <h4 class="fw-bold mb-0">CSS</h4>
               <p>Exceeds at CSS3 and is up to date in modern web designs.</p>
             </div>
@@ -163,14 +195,125 @@
               <use xlink:href="#geo-fill" />
             </svg>
             <div>
+              
+              <div class="small-logo">      
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bootstrap/bootstrap-original.svg" />
+              </div>
+
               <h4 class="fw-bold mb-0">Bootstrap5</h4>
               <p>Knows the ins and outs of responsive design.</p>
             </div>
+          </div>
+
+
+          <div class="col d-flex align-items-start">
+            <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em">
+              <use xlink:href="#geo-fill" />
+            </svg>
+            <div>
+              
+              <div class="small-logo">      
+              
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" />
+              
+              </div>
+
+              <h4 class="fw-bold mb-0">Javascript</h4>
+              <p>Knows the ins and outs of responsive design.</p>
+            </div>
+          </div>
+
+          <!-- DB -->
+
+          <div class="col d-flex align-items-start">
+            <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em">
+              <use xlink:href="#geo-fill" />
+            </svg>
+            <div>
+              
+              <div class="small-logo">      
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mysql/mysql-original.svg" />
+              </div>
+
+              <h4 class="fw-bold mb-0">MySQL</h4>
+              <p>Knows the ins and outs of responsive design.</p>
+            </div>
+          </div>
+
+          <div class="col d-flex align-items-start">
+            <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em">
+              <use xlink:href="#geo-fill" />
+            </svg>
+            <div>
+              <div class="small-logo">      
+               <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mongodb/mongodb-original.svg" />
+              </div>
+
+              <h4 class="fw-bold mb-0">MongoDB</h4>
+              <p>Knows the ins and outs of responsive design.</p>
+            </div>
+          </div>
+
+          
+          <div class="col d-flex align-items-start">
+            <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em">
+              <use xlink:href="#geo-fill" />
+            </svg>
+            <div>
+              <div class="small-logo">              
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/postgresql/postgresql-original.svg" />
+              </div>
+
+              <h4 class="fw-bold mb-0">PostgreSQL</h4>
+              <p>Knows the ins and outs of responsive design.</p>
+            </div>
+          </div>
+
+          <div class="col d-flex align-items-start">
+            <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em">
+              <use xlink:href="#geo-fill" />
+            </svg>
+            <div>
+              <div class="small-logo">                     
+               <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" />
+              </div>
+
+              <h4 class="fw-bold mb-0">Git</h4>
+              <p>Version controlling of projects with Github.</p>
+            </div>
+          </div>
+
+
+          <div class="col d-flex align-items-start">
+            <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em">
+              <use xlink:href="#geo-fill" />
+            </svg>
+            <div>
+              <div class="small-logo">                       
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/spring/spring-original.svg" />
+
+              </div>
+
+              <h4 class="fw-bold mb-0">Spring Boot</h4>
+              <p>Version controlling of projects with Github.</p>
+            </div>
+          </div>
+
+
           </div>
         </div>
 
     </section>
 
+
+
+
+
+
+
+
+
+    <!-- PROJECTS -->
     <section id="projects">
       <div class="container px-4 py-5" id="featured-3">
         <h2 class="pb-2 border-bottom">Projects</h2>
@@ -298,7 +441,7 @@
     </div>
   </footer>
 
-  <script src="validate.js"></script>
+  <!-- <script src="validate.js"></script> -->
 
 
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
