updated footer content

--- a/home/static/home/css/index.css
+++ b/home/static/home/css/index.css
@@ -201,5 +201,7 @@ textarea {
 
 .footer-bg {
   background-color: rgba(0, 0, 0, .85);
+  -webkit-backdrop-filter: saturate(180%) blur(20px);
+  backdrop-filter: saturate(180%) blur(20px);
 
 }
