--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -427,39 +427,6 @@
   </main>
 
 
-
-  <!-- <footer class="container py-5 ">
-    <div class="row">
-      <div class="col-12 col-md">
-        <small class="d-block mb-3 text-muted">&copy; {{current_year}}</small>
-      </div>
-
-
-      <div class="col-6 col-md">
-        <h5>Accounts</h5>
-        <ul class="list-unstyled text-small">
-          <li><a class="link-secondary" href="https://www.linkedin.com/in/nikhorem/" target="_blank">LinkedIn</a></li>
-          <li><a class="link-secondary" href="#">Stack OverFlow</a></li>
-          <li><a class="link-secondary" href="https://github.com/neekho" target="_blank">Github</a></li>
-          <li><a class="link-secondary" href="#">LeetCode</a></li>
-          <li><a class="link-secondary" href="https://www.hackerrank.com/profile/nikho_remulla" target="_blank" >HackerRank</a></li>
-
-        </ul>
-      </div>
-
-      <div class="col-6 col-md">
-        <h5>About</h5>
-        <ul class="list-unstyled text-small">
-          <li><a class="link-secondary" href="#">Contact</a></li>
-          <li><a class="link-secondary" href="#">Locations</a></li>
-          <li><a class="link-secondary" href="#">Background</a></li>
-        </ul>
-      </div>
-    </div>
-  </footer> -->
-
-
-
   <footer class="footer-bg text-center text-lg-start mt-xl-5 pt-4">
   <!-- Grid container -->
   <div class="container p-4">
@@ -467,20 +434,23 @@
     <div class="row">
       <!--Grid column-->
       <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-        <h5 class="text-uppercase mb-4">Accounts</h5>
+        <h5 class="text-uppercase mb-4 text-white">Accounts</h5>
 
         <ul class="list-unstyled mb-4">
           <li>
-            <a href="#!" class="text-white">About us</a>
+            <a href="https://www.linkedin.com/in/nikhorem/" target="_blank" class="text-white">LinkedIn</a>
           </li>
           <li>
-            <a href="#!" class="text-white">Collections</a>
+            <a href="#!" class="text-white">Stack Overflow</a>
           </li>
           <li>
-            <a href="#!" class="text-white">Environmental philosophy</a>
+            <a href="https://github.com/neekho" target="_blank" class="text-white">Github</a>
           </li>
           <li>
-            <a href="#!" class="text-white">Artist collaborations</a>
+            <a href="https://www.hackerrank.com/profile/nikho_remulla" target="_blank" class="text-white">HackerRank</a>
+          </li>
+          <li>
+            <a href="#!" class="text-white">LeetCode</a>
           </li>
         </ul>
       </div>
@@ -488,31 +458,26 @@
 
       <!--Grid column-->
       <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-        <h5 class="text-uppercase mb-4">Assistance</h5>
+        <h5 class="text-uppercase mb-4 text-white">Assistance</h5>
 
         <ul class="list-unstyled">
           <li>
-            <a href="#!" class="text-white">Contact us</a>
+            <a href="#!" class="text-white">Contact</a>
           </li>
           <li>
-            <a href="#!" class="text-white">Size Guide</a>
+            <a href="#!" class="text-white">Location</a>
           </li>
           <li>
-            <a href="#!" class="text-white">Shipping Information</a>
+            <a href="#!" class="text-white">Background</a>
           </li>
-          <li>
-            <a href="#!" class="text-white">Returns & Exchanges</a>
-          </li>
-          <li>
-            <a href="#!" class="text-white">Payment</a>
-          </li>
+  
         </ul>
       </div>
       <!--Grid column-->
 
       <!--Grid column-->
       <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-        <h5 class="text-uppercase mb-4">Careers</h5>
+        <h5 class="text-uppercase mb-4 text-white">Careers</h5>
 
         <ul class="list-unstyled">
           <li>
@@ -524,14 +489,14 @@
 
       <!--Grid column-->
       <!-- <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-        <h5 class="text-uppercase mb-4">Sign up to our newsletter</h5>
+        <h5 class="text-uppercase mb-4 text-white">Sign up to our newsletter</h5>
 
         <div class="form-outline form-white mb-4">
           <input type="email" id="form5Example2" class="form-control" />
-          <label class="form-label" for="form5Example2">Email address</label>
+          <label class="form-label text-white" for="form5Example2">Email address</label>
         </div>
 
-        <button type="submit" class="btn btn-outline-white btn-block">Subscribe</button>
+        <button type="submit" class="text-white btn btn-outline-white btn-block">Subscribe</button>
       </div> -->
       <!--Grid column-->
     </div>
