--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -309,76 +309,58 @@
 
 
 
-
-
-
-
-
-    <!-- PROJECTS -->
     <section id="projects">
       <div class="container px-4 py-5" id="featured-3">
         <h2 class="pb-2 border-bottom">Projects</h2>
         <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
-
-          <div class="feature col">
-            <div class="feature-icon bg-dark bg-gradient">
-              <svg class="bi" width="1em" height="1em">
-                <use xlink:href="#collection" />
-              </svg>
+    
+          <div class="col-xs-12 col-sm-4">
+            <div class="card" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://i1.wp.com/handluggageonly.co.uk/wp-content/uploads/2015/05/IMG_2813-s.jpg?w=1600&ssl=1');">
+              <div class="card-category">Web App</div>
+              <div class="card-description">
+                <h2>Django + SQL</h2>
+                <p>Django</p>
+              </div>
+              <img class="card-user avatar avatar-large" src="https://icongr.am/devicon/github-original.svg?size=28&color=141414">
+              <a class="card-link" href="#" ></a>
             </div>
-
-            <h2>Keylogging Script</h2>
-            <p>A script that is activated when a PC boots up and logs all of the user's typed key and stores the
-              information. Only to be sent to an email.</p>
-            <a href="#" class="icon-link">
-              Learn More
-              <svg class="bi" width="1em" height="1em">
-                <use xlink:href="#chevron-right" />
-              </svg>
-            </a>
+          </div>
+    
+          <div class="col-xs-12 col-sm-4">
+            <div class="card" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://i0.wp.com/handluggageonly.co.uk/wp-content/uploads/2016/04/IMG_5589.jpg?w=1600&ssl=1');">
+              <div class="card-category">Web Automation</div>
+              <div class="card-description">
+                <h2>Selenium</h2>
+                <p>Automate joining of meetings</p>
+              </div>
+              <img class="card-user avatar avatar-large" src="https://icongr.am/devicon/github-original.svg?size=28&color=141414">
+              <a class="card-link" href="#" ></a>
+            </div>
           </div>
 
-
-          <div class="feature col">
-            <div class="feature-icon bg-dark bg-gradient">
-              <svg class="bi" width="1em" height="1em">
-                <use xlink:href="#people-circle" />
-              </svg>
+          <div class="col-xs-12 col-sm-4">
+            <div class="card" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://i0.wp.com/handluggageonly.co.uk/wp-content/uploads/2016/04/IMG_5589.jpg?w=1600&ssl=1');">
+              <div class="card-category">E-Commerce Site</div>
+              <div class="card-description">
+                <h2>HTML & CSS</h2>
+                <p>Bootstrap 4 CSS framework</p>
+              </div>
+              <img class="card-user avatar avatar-large" src="https://icongr.am/devicon/github-original.svg?size=28&color=141414">
+              <a class="card-link" href="https://neekho.github.io/E-Commerce-Site/" target="_blank" ></a>
             </div>
-
-            <h2>Car Rental Web</h2>
-            <p>A Car Rental Web App that was made using Django and its default ORM. Users need to validate their driver
-              license before renting.</p>
-            <a href="#" class="icon-link">
-              Learn More
-              <svg class="bi" width="1em" height="1em">
-                <use xlink:href="#chevron-right" />
-              </svg>
-            </a>
           </div>
-
-
-          <div class="feature col">
-            <div class="feature-icon bg-dark bg-gradient">
-              <svg class="bi" width="1em" height="1em">
-                <use xlink:href="#toggles2" />
-              </svg>
-            </div>
-            <h2>Meet Auto-Join</h2>
-            <p>A script that is manually open and ask the user for the link of the Google Meeting so that they can join
-              on the specified time and date.</p>
-            <a href="#" class="icon-link">
-              Learn More
-              <svg class="bi" width="1em" height="1em">
-                <use xlink:href="#chevron-right" />
-              </svg>
-            </a>
-          </div>
-
+    
         </div>
-
-      </div> <!-- End of Projects-->
+      </div>
     </section>
+    
+
+
+
+
+
+
+
 
 
 
@@ -402,10 +384,6 @@
               <input type="text" class="form-control" id="name-text">
               <div class="status" id="status"></div>
             </div> -->
-
-
-            
-
 
 
             <div class="mb-3">
@@ -511,6 +489,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
     integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
     crossorigin="anonymous"></script>
+
 
 </body>
 
