--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -4,7 +4,7 @@
 <html lang="en">
 
 <head>
-  <title>My Portfolio</title>
+  <title>Nikho Remulla</title>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,6 +14,8 @@
           
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   
+  <link rel="shortcut icon" href="{% static 'home/images/fav.ico' %}" type="image/x-icon">
+
   <link rel="stylesheet" href="{% static 'home/css/index.css' %}">
 
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
@@ -27,11 +29,12 @@
 
   <header class="site-header sticky-top py-1">
     <nav class="container d-flex flex-column flex-md-row justify-content-between">
-      <a class="py-2" href="###" aria-label="Product">
-        <img src="{% static 'home/images/user.png' %}" style="width: 24px; height: 24px;" alt="X">
+      <a class="py-2" href="https://github.com/neekho" target="_blank" aria-label="Product">
+        <img src="https://icongr.am/devicon/github-original.svg?size=28&color=f3f1f1" style="width: 24px; height: 24px;" alt="X">
       </a>
-      <a class="py-2 d-none d-md-inline-block" href="#">About</a>
       <a class="py-2 d-none d-md-inline-block" href="#about-me">Education</a>
+      <a class="py-2 d-none d-md-inline-block" href="#career">Career</a>
+
       <a class="py-2 d-none d-md-inline-block" href="#my-skills">Skills</a>
       <a class="py-2 d-none d-md-inline-block" href="#projects">Projects</a>
       <a class="py-2 d-none d-md-inline-block" href="#contact">Contact</a>
@@ -60,7 +63,7 @@
           </a>
         </header>
 
-        <div class="p-5 mb-4 bg-light rounded-3">
+        <div class="p-5 mb-4 bg-light text-white bg-dark rounded-3 ">
           <div class="container-fluid py-5">
             <h1 class="display-5 fw-bold">Education</h1>
             <img src="{% static 'home/images/ceu-logo.png' %}" style="width: 200px; height: 200px; margin-bottom: 10px;" alt="">
@@ -81,7 +84,7 @@
           </div>
 
           <div class="col-md-6">
-            <div class="h-100 p-5 text-dark bg-light rounded-3">
+            <div class="h-100 p-5 text-white bg-dark rounded-3">
               <h2>Future Goals</h2>
               <img src="{% static 'home/images/python-logo.png' %}" style="width: 200px; height: 200px; margin-bottom: 10px;"
                 alt="Python">
@@ -89,12 +92,45 @@
             </div>
           </div>
         </div>
-
-
       </div>
-
     </section>
 
+
+
+
+
+    <section id="career">
+      <div class="container px-4 py-5" id="featured-3">
+        <h2 class="pb-2 border-bottom">Career Timeline</h2>
+    
+        <div class="container">
+          <ul class="timeline-3">
+            <li class="mb-4"> <!-- Added margin-bottom class -->
+              <div class="time-line-content">
+
+                <a href="#!">New Web Design</a>
+                <a href="#!" class="float-end">21 March, 2014</a>
+                <p class="mt-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque scelerisque diam non nisi semper, et elementum lorem ornare. Maecenas placerat facilisis mollis. Duis sagittis ligula in sodales vehicula....</p>
+              </div>
+            </li>
+
+            
+            <li class="mb-4"> <!-- Added margin-bottom class -->
+              <a href="#!">21 000 Job Seekers</a>
+              <a href="#!" class="float-end">4 March, 2014</a>
+              <p class="mt-2">Curabitur purus sem, malesuada eu luctus eget, suscipit sed turpis. Nam pellentesque felis vitae justo accumsan, sed semper nisi sollicitudin...</p>
+            </li>
+            <li class="mb-4"> <!-- Added margin-bottom class -->
+              <a href="#!">Awesome Employers</a>
+              <a href="#!" class="float-end">1 April, 2014</a>
+              <p class="mt-2">Fusce ullamcorper ligula sit amet quam accumsan aliquet. Sed nulla odio, tincidunt vitae nunc vitae, mollis pharetra velit. Sed nec tempor nibh...</p>
+            </li>
+          </ul>
+        </div>
+    
+      </div>
+    </section>
+    
 
 
 
@@ -114,7 +150,7 @@
               <div class="small-logo">
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/java/java-original.svg" />
               </div>
-              <h4 class="fw-bold mb-0">Java</h4>
+              <h4 class="fw-bold mb-2">Java</h4>
               <p>Made various Android mobile app.</p>
             </div>
           </div>
@@ -128,7 +164,7 @@
               <div class="small-logo">
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" />
               </div>
-              <h4 class="fw-bold mb-0">Python</h4>
+              <h4 class="fw-bold mb-2">Python</h4>
               <p>Excels at Python 3.11 and more specifically on Automation.</p>
             </div>
           </div>
@@ -142,7 +178,7 @@
               <div class="small-logo">
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/django/django-plain.svg" />
               </div>
-              <h4 class="fw-bold mb-0">Django</h4>
+              <h4 class="fw-bold mb-2">Django</h4>
               <p>Made various MVC Web Apps with Django.</p>
             </div>
           </div>
@@ -156,7 +192,7 @@
               <div class="small-logo">
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original.svg" />
               </div>
-              <h4 class="fw-bold mb-0">NodeJS</h4>
+              <h4 class="fw-bold mb-2">NodeJS</h4>
               <p>Specializes in web app development that is I/O intensive.</p>
             </div>
           </div>
@@ -171,7 +207,7 @@
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" />
               </div>
 
-              <h4 class="fw-bold mb-0">HTML5</h4>
+              <h4 class="fw-bold mb-2">HTML5</h4>
               <p>Made different web designs in a wide array of projects.</p>
             </div>
           </div>
@@ -185,7 +221,7 @@
               <div class="small-logo">
                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" />
               </div>
-              <h4 class="fw-bold mb-0">CSS</h4>
+              <h4 class="fw-bold mb-2">CSS</h4>
               <p>Exceeds at CSS3 and is up to date in modern web designs.</p>
             </div>
           </div>
@@ -201,7 +237,7 @@
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bootstrap/bootstrap-original.svg" />
               </div>
 
-              <h4 class="fw-bold mb-0">Bootstrap5</h4>
+              <h4 class="fw-bold mb-2">Bootstrap5</h4>
               <p>Knows the ins and outs of responsive design.</p>
             </div>
           </div>
@@ -219,8 +255,8 @@
               
               </div>
 
-              <h4 class="fw-bold mb-0">Javascript</h4>
-              <p>Knows the ins and outs of responsive design.</p>
+              <h4 class="fw-bold mb-2">Javascript</h4>
+              <p>Interactive web apps with vanilla JS.</p>
             </div>
           </div>
 
@@ -236,24 +272,12 @@
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mysql/mysql-original.svg" />
               </div>
 
-              <h4 class="fw-bold mb-0">MySQL</h4>
-              <p>Knows the ins and outs of responsive design.</p>
+              <h4 class="fw-bold mb-2">MySQL</h4>
+              <p>Made problem solving ERDs with MySQL.</p>
             </div>
           </div>
 
-          <div class="hover-container col d-flex align-items-start">
-            <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em">
-              <use xlink:href="#geo-fill" />
-            </svg>
-            <div>
-              <div class="small-logo">      
-               <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mongodb/mongodb-original.svg" />
-              </div>
 
-              <h4 class="fw-bold mb-0">MongoDB</h4>
-              <p>Knows the ins and outs of responsive design.</p>
-            </div>
-          </div>
 
           
           <div class="hover-container col d-flex align-items-start">
@@ -265,10 +289,11 @@
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/postgresql/postgresql-original.svg" />
               </div>
 
-              <h4 class="fw-bold mb-0">PostgreSQL</h4>
-              <p>Knows the ins and outs of responsive design.</p>
+              <h4 class="fw-bold mb-2">PostgreSQL</h4>
+              <p>Used PostgreSQL for efficient database management.</p>
             </div>
           </div>
+          
 
           <div class="hover-container col d-flex align-items-start">
             <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em">
@@ -279,8 +304,23 @@
                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" />
               </div>
 
-              <h4 class="fw-bold mb-0">Git</h4>
+              <h4 class="fw-bold mb-2">Git</h4>
               <p>Version controlling of projects with Github.</p>
+            </div>
+          </div>
+
+          <div class="hover-container col d-flex align-items-start">
+            <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em">
+              <use xlink:href="#geo-fill" />
+            </svg>
+            <div>
+              <div class="small-logo">      
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/unity/unity-original.svg" />
+
+              </div>
+
+              <h4 class="fw-bold mb-2">Unity</h4>
+              <p>Platformer games with C# and Unity game engine.</p>
             </div>
           </div>
 
@@ -295,8 +335,8 @@
 
               </div>
 
-              <h4 class="fw-bold mb-0">Spring Boot</h4>
-              <p>Version controlling of projects with Github.</p>
+              <h4 class="fw-bold mb-2">Spring Boot</h4>
+              <p>RESTful architecture with Java Spring Boot.</p>
             </div>
           </div>
 
@@ -319,7 +359,7 @@
               <div class="card-category">Web App</div>
               <div class="card-description">
                 <h2>Django + SQL</h2>
-                <p>Django</p>
+                <p>A business management system</p>
               </div>
               <img class="card-user avatar avatar-large" src="https://icongr.am/devicon/github-original.svg?size=28&color=141414">
               <a class="card-link" href="#" ></a>
@@ -334,7 +374,7 @@
                 <p>Automate joining of meetings</p>
               </div>
               <img class="card-user avatar avatar-large" src="https://icongr.am/devicon/github-original.svg?size=28&color=141414">
-              <a class="card-link" href="#" ></a>
+              <a class="card-link" href="https://github.com/neekho/automate-gmeet" target="_blank" ></a>
             </div>
           </div>
 
@@ -404,6 +444,8 @@
 
   </main>
 
+
+  <!-- FOOTER -->
 
   <footer class="footer-bg text-center text-lg-start mt-xl-5 pt-4">
   <!-- Grid container -->
