--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -355,7 +355,7 @@
         <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
     
           <div class="col-xs-12 col-sm-4">
-            <div class="card" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://i1.wp.com/handluggageonly.co.uk/wp-content/uploads/2015/05/IMG_2813-s.jpg?w=1600&ssl=1');">
+            <div class="card" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://i.ibb.co/VMcvppH/image-2024-02-08-235958962.png');">
               <div class="card-category">Web App</div>
               <div class="card-description">
                 <h2>Django + SQL</h2>
@@ -367,7 +367,7 @@
           </div>
     
           <div class="col-xs-12 col-sm-4">
-            <div class="card" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://i0.wp.com/handluggageonly.co.uk/wp-content/uploads/2016/04/IMG_5589.jpg?w=1600&ssl=1');">
+            <div class="card" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://i.ibb.co/yfzgJ0D/image-2024-02-08-233357390.png');">
               <div class="card-category">Web Automation</div>
               <div class="card-description">
                 <h2>Selenium</h2>
@@ -379,7 +379,7 @@
           </div>
 
           <div class="col-xs-12 col-sm-4">
-            <div class="card" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://i0.wp.com/handluggageonly.co.uk/wp-content/uploads/2016/04/IMG_5589.jpg?w=1600&ssl=1');">
+            <div class="card" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://i.ibb.co/cYZhx7y/image-2024-02-08-232646409.png');">
               <div class="card-category">E-Commerce Site</div>
               <div class="card-description">
                 <h2>HTML & CSS</h2>
