fixed project selections, and progress on career sect

--- a/home/static/home/css/index.css
+++ b/home/static/home/css/index.css
@@ -1,6 +1,7 @@
 * {
     list-style-type: none;
     text-decoration: none;
+    
 }
 
 .container {
@@ -9,8 +10,16 @@
 
   a {
     text-decoration: none;
+    color: rgb(0, 0, 0.85);
+    transition: transform 0.6s step-end;
+
   }
   
+  a:hover {
+    color: rgb(90, 90, 92);
+    transform: scale(1.1);
+  }
+
   /*
    * Custom translucent site header
    */
@@ -241,7 +250,7 @@ footer {
   background-size: cover !important;
   color: white;
   position: relative;
-  border-radius: 5px;
+  border-radius: 7px;
   margin-bottom: 20px;
 }
 .card-user {
@@ -259,12 +268,20 @@ footer {
   position: absolute;
   bottom: 10px;
   left: 10px;
+  display: flex;
+  flex-direction: column;
+  color: white;
 }
-.card-description h2 {
-  font-size: 22px;
-}
+
+.card-description h2,
 .card-description p {
   font-size: 15px;
+  margin: 0; /* Remove default margin */
+}
+
+
+.card-description p {
+  margin: 2px; /* Remove default margin */
 }
 .card-link {
   position: absolute;
@@ -276,7 +293,7 @@ footer {
   opacity: 0;
 }
 .card-link:hover{
-  opacity: 0.1;
+  opacity: 0.2;
 }
 .features img {
   width: 100px;
@@ -296,14 +313,13 @@ footer {
 
 /* career */
 ul.timeline-3 {
-  list-style-type: none;
   position: relative;
 }
 ul.timeline-3:before {
   content: " ";
   background: #d4d9df;
   display: inline-block;
-  position: absolute;
+  position: relative; /* relative*/
   left: 29px;
   width: 2px;
   height: 100%;
@@ -319,7 +335,7 @@ ul.timeline-3 > li:before {
   display: inline-block;
   position: absolute;
   border-radius: 50%;
-  border: 3px solid #22c0e8;
+  border: 3px solid rgba(64, 64, 64, 0.85);
   left: 20px;
   width: 20px;
   height: 20px;
