--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -108,21 +108,21 @@
             <li class="mb-4"> <!-- Added margin-bottom class -->
               <div class="time-line-content">
 
-                <a href="#!">New Web Design</a>
-                <a href="#!" class="float-end">21 March, 2014</a>
+                <a href="#">CEU - College Lecturer</a>
+                <p href="#!" class="float-end">Sep 2023 - Present</p>
                 <p class="mt-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque scelerisque diam non nisi semper, et elementum lorem ornare. Maecenas placerat facilisis mollis. Duis sagittis ligula in sodales vehicula....</p>
               </div>
             </li>
 
             
             <li class="mb-4"> <!-- Added margin-bottom class -->
-              <a href="#!">21 000 Job Seekers</a>
-              <a href="#!" class="float-end">4 March, 2014</a>
+              <a href="#!">Sysmex - Web Developer</a>
+              <p href="#!" class="float-end">Mar 2023 - Jun 2023</p>
               <p class="mt-2">Curabitur purus sem, malesuada eu luctus eget, suscipit sed turpis. Nam pellentesque felis vitae justo accumsan, sed semper nisi sollicitudin...</p>
             </li>
             <li class="mb-4"> <!-- Added margin-bottom class -->
-              <a href="#!">Awesome Employers</a>
-              <a href="#!" class="float-end">1 April, 2014</a>
+              <a href="#!">CGI - Data Analyst</a>
+              <p href="#!" class="float-end">Nov 2021 - Aug 2022</p>
               <p class="mt-2">Fusce ullamcorper ligula sit amet quam accumsan aliquet. Sed nulla odio, tincidunt vitae nunc vitae, mollis pharetra velit. Sed nec tempor nibh...</p>
             </li>
           </ul>
@@ -355,14 +355,14 @@
         <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
     
           <div class="col-xs-12 col-sm-4">
-            <div class="card" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://i.ibb.co/VMcvppH/image-2024-02-08-235958962.png');">
-              <div class="card-category">Web App</div>
+            <div class="card" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(https://i.ibb.co/9skfsqx/Capture.png" alt="Capture'" alt="Caputre-1');">
+              <div class="card-category">Game Dev</div>
               <div class="card-description">
-                <h2>Django + SQL</h2>
-                <p>A business management system</p>
+                <h2>Unity Engine </h2>
+                <p>2D Game</p>
               </div>
               <img class="card-user avatar avatar-large" src="https://icongr.am/devicon/github-original.svg?size=28&color=141414">
-              <a class="card-link" href="https://github.com/neekho/BMS-Business-Management-System" target="_blank" ></a>
+              <a class="card-link" href="https://github.com/neekho/2DUnity" target="_blank" ></a>
             </div>
           </div>
     
