--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -105,31 +105,74 @@
     
         <div class="container">
           <ul class="timeline-3">
-            <li class="mb-4"> <!-- Added margin-bottom class -->
-              <div class="time-line-content">
-
-                <a href="#">CEU - College Lecturer</a>
-                <p href="#!" class="float-end">Sep 2023 - Present</p>
-                <p class="mt-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque scelerisque diam non nisi semper, et elementum lorem ornare. Maecenas placerat facilisis mollis. Duis sagittis ligula in sodales vehicula....</p>
-              </div>
-            </li>
+            
 
             
             <li class="mb-4"> <!-- Added margin-bottom class -->
-              <a href="#!">Sysmex - Web Developer</a>
-              <p href="#!" class="float-end">Mar 2023 - Jun 2023</p>
-              <p class="mt-2">Curabitur purus sem, malesuada eu luctus eget, suscipit sed turpis. Nam pellentesque felis vitae justo accumsan, sed semper nisi sollicitudin...</p>
+              <a href="#!">Sysmex - Web Developer Intern</a>
+              <i class="text-muted">March 2023 - June 2023</i>
+              <!-- <p href="#!" class="float-end">Mar 2023 - Jun 2023</p> -->
+              <p class="mt-3">Developed a business utility web app for the company, that meets all the needed features, and standards of a reliable system. Enabling employees to save time and effort in their daily workload.</p>
             </li>
             <li class="mb-4"> <!-- Added margin-bottom class -->
               <a href="#!">CGI - Data Analyst</a>
-              <p href="#!" class="float-end">Nov 2021 - Aug 2022</p>
-              <p class="mt-2">Fusce ullamcorper ligula sit amet quam accumsan aliquet. Sed nulla odio, tincidunt vitae nunc vitae, mollis pharetra velit. Sed nec tempor nibh...</p>
+              <i class="text-muted">Nov 2021 - Aug 2022</i>
+
+              <!-- <p href="#!" class="float-end">Nov 2021 - Aug 2022</p> -->
+              <p class="mt-3">Reached beyond daily target of quotas in gathering, filtering, and validating customer sensitive data. Which allowed the company to make informed decision, based on my analytics.</p>
             </li>
           </ul>
         </div>
     
       </div>
     </section>
+
+
+    <section id="projects">
+      <div class="container px-4 py-5" id="featured-3">
+        <h2 class="pb-2 border-bottom">Projects</h2>
+        <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+    
+          <div class="col-xs-12 col-sm-4">
+            <div class="card" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(https://i.ibb.co/9skfsqx/Capture.png" alt="Capture'" alt="Caputre-1');">
+              <div class="card-category">Game Dev</div>
+              <div class="card-description">
+                <h2>Unity Engine </h2>
+                <p>2D Game</p>
+              </div>
+              <img class="card-user avatar avatar-large" src="https://icongr.am/devicon/github-original.svg?size=28&color=141414">
+              <a class="card-link" href="https://github.com/neekho/2DUnity" target="_blank" ></a>
+            </div>
+          </div>
+    
+          <div class="col-xs-12 col-sm-4">
+            <div class="card" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://i.ibb.co/yfzgJ0D/image-2024-02-08-233357390.png');">
+              <div class="card-category">Web Automation</div>
+              <div class="card-description">
+                <h2>Selenium</h2>
+                <p>Automate joining of meetings</p>
+              </div>
+              <img class="card-user avatar avatar-large" src="https://icongr.am/devicon/github-original.svg?size=28&color=141414">
+              <a class="card-link" href="https://github.com/neekho/automate-gmeet" target="_blank" ></a>
+            </div>
+          </div>
+
+          <div class="col-xs-12 col-sm-4">
+            <div class="card" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://i.ibb.co/cYZhx7y/image-2024-02-08-232646409.png');">
+              <div class="card-category">E-Commerce Site</div>
+              <div class="card-description">
+                <h2>HTML & CSS</h2>
+                <p>Bootstrap 4 CSS framework</p>
+              </div>
+              <img class="card-user avatar avatar-large" src="https://icongr.am/devicon/github-original.svg?size=28&color=141414">
+              <a class="card-link" href="https://neekho.github.io/E-Commerce-Site/" target="_blank" ></a>
+            </div>
+          </div>
+    
+        </div>
+      </div>
+    </section>
+    
     
 
 
@@ -349,51 +392,7 @@
 
 
 
-    <section id="projects">
-      <div class="container px-4 py-5" id="featured-3">
-        <h2 class="pb-2 border-bottom">Projects</h2>
-        <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
-    
-          <div class="col-xs-12 col-sm-4">
-            <div class="card" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(https://i.ibb.co/9skfsqx/Capture.png" alt="Capture'" alt="Caputre-1');">
-              <div class="card-category">Game Dev</div>
-              <div class="card-description">
-                <h2>Unity Engine </h2>
-                <p>2D Game</p>
-              </div>
-              <img class="card-user avatar avatar-large" src="https://icongr.am/devicon/github-original.svg?size=28&color=141414">
-              <a class="card-link" href="https://github.com/neekho/2DUnity" target="_blank" ></a>
-            </div>
-          </div>
-    
-          <div class="col-xs-12 col-sm-4">
-            <div class="card" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://i.ibb.co/yfzgJ0D/image-2024-02-08-233357390.png');">
-              <div class="card-category">Web Automation</div>
-              <div class="card-description">
-                <h2>Selenium</h2>
-                <p>Automate joining of meetings</p>
-              </div>
-              <img class="card-user avatar avatar-large" src="https://icongr.am/devicon/github-original.svg?size=28&color=141414">
-              <a class="card-link" href="https://github.com/neekho/automate-gmeet" target="_blank" ></a>
-            </div>
-          </div>
-
-          <div class="col-xs-12 col-sm-4">
-            <div class="card" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://i.ibb.co/cYZhx7y/image-2024-02-08-232646409.png');">
-              <div class="card-category">E-Commerce Site</div>
-              <div class="card-description">
-                <h2>HTML & CSS</h2>
-                <p>Bootstrap 4 CSS framework</p>
-              </div>
-              <img class="card-user avatar avatar-large" src="https://icongr.am/devicon/github-original.svg?size=28&color=141414">
-              <a class="card-link" href="https://neekho.github.io/E-Commerce-Site/" target="_blank" ></a>
-            </div>
-          </div>
-    
-        </div>
-      </div>
-    </section>
-    
+   
 
 
 
