--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -34,7 +34,6 @@
       </a>
       <a class="py-2 d-none d-md-inline-block" href="#about-me">Education</a>
       <a class="py-2 d-none d-md-inline-block" href="#career">Career</a>
-
       <a class="py-2 d-none d-md-inline-block" href="#my-skills">Skills</a>
       <a class="py-2 d-none d-md-inline-block" href="#projects">Projects</a>
       <a class="py-2 d-none d-md-inline-block" href="#contact">Contact</a>
@@ -45,14 +44,35 @@
 
 
   <main>
-    <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
-      <div class="col-md-5 p-lg-5 mx-auto my-5">
+
+    <!-- BANNER -->
+    <!-- <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-dark">
+      <div class="p-lg-5 my-5">
         <img src="{% static 'home/images/me.jpg' %}" alt="">
         <h1 class="display-4 fw-normal">Nikho Remulla</h1>
         <p class="lead fw-normal">Here you can learn about myself as a student and a developer.</p>
         <a class="btn btn-outline-secondary" href="#about-me">Learn More</a>
       </div>
+    </div> -->
+
+
+
+    <div class="landing-banner">
+      <div class="container">
+        <h1 class="display-4">Nikho Remulla</h1>
+        <p class="lead">Here you can learn about myself as a student and a developer.</p>
+        <a class="btn btn-outline-secondary btn-contact" href="#contact">Contact Me</a>
+        <a class="btn btn-outline-secondary" href="https://github.com/neekho" target="_blank">GitHub Profile</a>
+      </div>
     </div>
+  
+
+
+
+
+
+
+
 
     <section id="about-me">
       <div class="container py-4">
