--- a/home/static/home/css/index.css
+++ b/home/static/home/css/index.css
@@ -1,201 +1,199 @@
 * {
-    list-style-type: none;
-    text-decoration: none;
-    
+  list-style-type: none;
+  text-decoration: none;
 }
 
 .container {
-    max-width: 960px;
-  }
-
-  a {
-    text-decoration: none;
-    color: rgb(0, 0, 0.85);
-    transition: transform 0.6s step-end;
-
-  }
-  
-  a:hover {
-    color: rgb(90, 90, 92);
-    transform: scale(1.1);
-  }
-
-  /*
-   * Custom translucent site header
-   */
-  
-  .site-header {
-    background-color: rgba(0, 0, 0, .85);
-    -webkit-backdrop-filter: saturate(180%) blur(20px);
-    backdrop-filter: saturate(180%) blur(20px);
-  }
-
-
-  .site-header a {
-    color: #8e8e8e;
-    transition: color .15s ease-in-out;
-  }
-  .site-header a:hover {
-    color: #fff;
-    text-decoration: none;
-  }
-  
-
-
-  .landing-banner {
-    background: url('https://wallpapers.com/images/hd/coding-background-9izlympnd0ovmpli.jpg'); /* Add your banner image URL */
-    
-    background-size: cover;
-    background-position: center;
-    color: white;
-    text-align: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-
-
-  }
-
-  .btn-contact {
-    margin-right: 10px;
-  }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  /*
-   * Dummy devices (replace them with your own or something else entirely!)
-   */
-  
-  .product-device {
-    position: absolute;
-    right: 10%;
-    bottom: -30%;
-    width: 300px;
-    height: 540px;
-    background-color: #333;
-    border-radius: 21px;
-    transform: rotate(30deg);
-  }
-  
-  .product-device::before {
-    position: absolute;
-    top: 10%;
-    right: 10px;
-    bottom: 10%;
-    left: 10px;
-    content: "";
-    background-color: rgba(255, 255, 255, .1);
-    border-radius: 5px;
-  }
-  
-  .product-device-2 {
-    top: -25%;
-    right: auto;
-    bottom: 0;
-    left: 5%;
-    background-color: #e5e5e5;
-  }
-  
-  
-  /*
-   * Extra utilities
-   */
-  
-  .flex-equal > * {
-    flex: 1;
-  }
-  @media (min-width: 768px) {
-    .flex-md-equal > * {
-      flex: 1;
-    }
-  }
-
-  .b-example-divider {
-    height: 3rem;
-    background-color: rgba(0, 0, 0, .1);
-    border: solid rgba(0, 0, 0, .15);
-    border-width: 1px 0;
-    box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
-  }
-  
-  .bi {
-    vertical-align: -.125em;
-    fill: currentColor;
-  }
-  
-  .feature-icon {
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    width: 4rem;
-    height: 4rem;
-    margin-bottom: 1rem;
-    font-size: 2rem;
-    color: #fff;
-    border-radius: .75rem;
-  }
-  
-  .icon-link {
-    display: inline-flex;
-    align-items: center;
-  }
-  .icon-link > .bi {
-    margin-top: .125rem;
-    margin-left: .125rem;
-    transition: transform .25s ease-in-out;
-    fill: currentColor;
-  }
-  .icon-link:hover > .bi {
-    transform: translate(.25rem);
-  }
-  
-  .icon-square {
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    width: 3rem;
-    height: 3rem;
-    font-size: 1.5rem;
-    border-radius: .75rem;
-  }
-  
-  .rounded-4 { border-radius: .5rem; }
-  .rounded-5 { border-radius: 1rem; }
-  
-  .text-shadow-1 { text-shadow: 0 .125rem .25rem rgba(0, 0, 0, .25); }
-  .text-shadow-2 { text-shadow: 0 .25rem .5rem rgba(0, 0, 0, .25); }
-  .text-shadow-3 { text-shadow: 0 .5rem 1.5rem rgba(0, 0, 0, .25); }
-  
-  .card-cover {
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: cover;
-  }
-
-
-
-.bg-primary {
-    --bs-bg-opacity: 5;
-    background-color: rgba(var(--bs-primary-rgb),var(--bs-bg-opacity)) !important;
-
-    
+  max-width: 960px;
 }
 
+a {
+  text-decoration: none;
+  color: rgb(0, 0, 0.85);
+  transition: transform 0.6s step-end;
+}
+
+a:hover {
+  color: rgb(90, 90, 92);
+  transform: scale(1.1);
+}
+
+/*
+   * Custom translucent site header
+   */
+
+.site-header {
+  background-color: rgba(0, 0, 0, 0.85);
+  -webkit-backdrop-filter: saturate(180%) blur(20px);
+  backdrop-filter: saturate(180%) blur(20px);
+}
+
+.site-header a {
+  color: #8e8e8e;
+  transition: color 0.15s ease-in-out;
+}
+.site-header a:hover {
+  color: #fff;
+  text-decoration: none;
+}
+
+
+
+.landing-banner {
+  background: url("https://wallpapers.com/images/hd/coding-background-9izlympnd0ovmpli.jpg"); /* Add your banner image URL */
+
+  background-size: cover;
+  background-position: center;
+  color: white;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+.btn-contact {
+  margin-right: 10px;
+}
+
+
+.btn-outline-secondary {
+  color: #fff;
+  border-color: #f4f4f4;
+}
+
+
+.btn-outline-secondary:hover {
+  fill: #333;
+}
+
+/*
+   * Dummy devices (replace them with your own or something else entirely!)
+   */
+
+.product-device {
+  position: absolute;
+  right: 10%;
+  bottom: -30%;
+  width: 300px;
+  height: 540px;
+  background-color: #333;
+  border-radius: 21px;
+  transform: rotate(30deg);
+}
+
+.product-device::before {
+  position: absolute;
+  top: 10%;
+  right: 10px;
+  bottom: 10%;
+  left: 10px;
+  content: "";
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 5px;
+}
+
+.product-device-2 {
+  top: -25%;
+  right: auto;
+  bottom: 0;
+  left: 5%;
+  background-color: #e5e5e5;
+}
+
+/*
+   * Extra utilities
+   */
+
+.flex-equal > * {
+  flex: 1;
+}
+@media (min-width: 768px) {
+  .flex-md-equal > * {
+    flex: 1;
+  }
+}
+
+.b-example-divider {
+  height: 3rem;
+  background-color: rgba(0, 0, 0, 0.1);
+  border: solid rgba(0, 0, 0, 0.15);
+  border-width: 1px 0;
+  box-shadow: inset 0 0.5em 1.5em rgba(0, 0, 0, 0.1),
+    inset 0 0.125em 0.5em rgba(0, 0, 0, 0.15);
+}
+
+.bi {
+  vertical-align: -0.125em;
+  fill: currentColor;
+}
+
+.feature-icon {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 4rem;
+  height: 4rem;
+  margin-bottom: 1rem;
+  font-size: 2rem;
+  color: #fff;
+  border-radius: 0.75rem;
+}
+
+.icon-link {
+  display: inline-flex;
+  align-items: center;
+}
+.icon-link > .bi {
+  margin-top: 0.125rem;
+  margin-left: 0.125rem;
+  transition: transform 0.25s ease-in-out;
+  fill: currentColor;
+}
+.icon-link:hover > .bi {
+  transform: translate(0.25rem);
+}
+
+.icon-square {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 3rem;
+  height: 3rem;
+  font-size: 1.5rem;
+  border-radius: 0.75rem;
+}
+
+.rounded-4 {
+  border-radius: 0.5rem;
+}
+.rounded-5 {
+  border-radius: 1rem;
+}
+
+.text-shadow-1 {
+  text-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.25);
+}
+.text-shadow-2 {
+  text-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.25);
+}
+.text-shadow-3 {
+  text-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.25);
+}
+
+.card-cover {
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+}
+
+.bg-primary {
+  --bs-bg-opacity: 5;
+  background-color: rgba(
+    var(--bs-primary-rgb),
+    var(--bs-bg-opacity)
+  ) !important;
+}
 
 textarea {
   resize: none;
@@ -215,15 +213,12 @@ textarea {
   }
 }
 
-
-
 /* Tools/Languages Section */
 
 .small-logo img {
   width: 30px;
   height: 30px;
   transition: transform 0.6s ease-in-out;
-
 }
 
 .hover-container {
@@ -234,11 +229,15 @@ textarea {
   transform: scale(1.1); /* Adjust the scale factor as needed */
 }
 
-.hover-container img, h4, p {
+.hover-container img,
+h4,
+p {
   transition: transform 0.3s ease-in-out;
 }
 
-.hover-container:hover img, h4, p {
+.hover-container:hover img,
+h4,
+p {
   transform: scale(1.1); /* Adjust the scale factor as needed */
 }
 
@@ -252,38 +251,34 @@ footer {
   padding: 10px; 
 }*/
 
-
 .footer-bg {
-  background-color: rgba(0, 0, 0, .85);
+  background-color: rgba(0, 0, 0, 0.85);
   -webkit-backdrop-filter: saturate(180%) blur(20px);
   backdrop-filter: saturate(180%) blur(20px);
-
 }
-
 
 /* CARDS */
 .padded {
   padding: 100px 0;
 }
 .wrapper-grey {
-  background: #F4F4F4;
+  background: #f4f4f4;
 }
 .avatar {
   width: 30px;
   border-radius: 50%;
 }
 .avatar-bordered {
-  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
   border: white 1px solid;
 }
 .avatar-large {
   width: 50px;
 }
 
-
 .card {
   height: 250px;
-  text-shadow: 0 1px 3px rgba(0,0,0,0.6);
+  text-shadow: 0 1px 3px rgba(0, 0, 0, 0.6);
   background-size: cover !important;
   color: white;
   position: relative;
@@ -316,7 +311,6 @@ footer {
   margin: 0; /* Remove default margin */
 }
 
-
 .card-description p {
   margin: 2px; /* Remove default margin */
 }
@@ -325,11 +319,11 @@ footer {
   top: 0;
   bottom: 0;
   width: 100%;
-  z-index:2;
+  z-index: 2;
   background: black;
   opacity: 0;
 }
-.card-link:hover{
+.card-link:hover {
   opacity: 0.2;
 }
 .features img {
@@ -343,10 +337,6 @@ footer {
   font-size: 15px;
   font-weight: lighter;
 }
-
-
-
-
 
 /* career */
 ul.timeline-3 {
