--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -45,72 +45,51 @@
 
   <main>
 
-    <!-- BANNER -->
-    <!-- <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-dark">
-      <div class="p-lg-5 my-5">
-        <img src="{% static 'home/images/me.jpg' %}" alt="">
-        <h1 class="display-4 fw-normal">Nikho Remulla</h1>
-        <p class="lead fw-normal">Here you can learn about myself as a student and a developer.</p>
-        <a class="btn btn-outline-secondary" href="#about-me">Learn More</a>
-      </div>
-    </div> -->
-
-
-
     <div class="landing-banner">
       <div class="container">
         <h1 class="display-4">Nikho Remulla</h1>
         <p class="lead">Here you can learn about myself as a student and a developer.</p>
-        <a class="btn btn-outline-secondary btn-contact" href="#contact">Contact Me</a>
-        <a class="btn btn-outline-secondary" href="https://github.com/neekho" target="_blank">GitHub Profile</a>
+        <a class="btn btn-outline-secondary btn-contact rounded-3" href="#contact">Contact Me</a>
+        <a class="btn btn-outline-secondary rounded-3" href="https://github.com/neekho" target="_blank">GitHub Profile</a>
       </div>
     </div>
   
 
 
-
-
-
     <section id="about-me">
-      <div class="container py-4">
-        <header class="pb-3 mb-4 border-bottom">
-          <a href="#" class="d-flex align-items-center text-dark text-decoration-none">
+      <div class="container px-4 py-5" id="featured-3">
+        <h2 class="pb-2">About Me</h2>
 
-            <span class="fs-4">About Me</span>
-          </a>
-        </header>
-
-        <div class="p-5 mb-4 bg-light text-white bg-dark rounded-3 ">
+        <div class="glass p-5 mb-4 bg-light text-white bg-dark rounded-3">
           <div class="container-fluid py-5">
             <h1 class="display-5 fw-bold">Education</h1>
             <img src="{% static 'home/images/ceu-logo.png' %}" style="width: 200px; height: 200px; margin-bottom: 10px;" alt="">
             <p class="col-md-8 fs-4">I am a third year college student of Centro Escolar Makati. Who is passionate in
               application development and automation.</p>
-
           </div>
         </div>
 
         <div class="row align-items-md-stretch">
           <div class="col-md-6">
-            <div class="h-100 p-5 text-white bg-dark rounded-3">
+            <div class="glass h-100 p-5 text-white bg-dark rounded-3">
               <h2>Interest</h2>
               <img src="{% static 'home/images/book-41623.png' %}" style="width: 200px; height: 200px;" alt="Book">
               <p>I am deeply into reading, and programming. My hobbies include calisthenics and more reading.</p>
 
             </div>
-          </div>
+        </div>
 
-          <div class="col-md-6">
-            <div class="h-100 p-5 text-white bg-dark rounded-3">
-              <h2>Future Goals</h2>
-              <img src="{% static 'home/images/python-logo.png' %}" style="width: 200px; height: 200px; margin-bottom: 10px;"
+        <div class="col-md-6">
+          <div class="glass h-100 p-5 text-white bg-dark rounded-3">
+            <h2>Future Goals</h2>
+            <img src="{% static 'home/images/python-logo.png' %}" style="width: 200px; height: 200px; margin-bottom: 10px;"
                 alt="Python">
-              <p>I am planning to read into machine learning and specialize in Python.</p>
-            </div>
+            <p>I am planning to read into machine learning and specialize in Python.</p>
           </div>
         </div>
       </div>
-    </section>
+    </div>
+  </section>
 
 
 
@@ -449,7 +428,7 @@
 
 
             <div class="mb-3">
-              <button class="btn btn-dark" type="submit">Submit</button>
+              <button class="btn btn-dark rounded-3" type="submit">Submit</button>
             </div>
 
           </div>
