--- a/home/static/home/css/index.css
+++ b/home/static/home/css/index.css
@@ -37,10 +37,28 @@ a:hover {
   text-decoration: none;
 }
 
+.translucent-content {
+  background-color: rgba(0, 0, 0, 0.85);
+  -webkit-backdrop-filter: saturate(180%) blur(20px);
+  backdrop-filter: saturate(180%) blur(20px);
+  color: #fff; /* Set text color to white or a suitable color */
+  z-index: 1; /* Ensure it's on top */
+  position: sticky;
 
+}
+
+
+.glass{
+  background: linear-gradient(135deg, rgba(198, 19, 19, 0.1), rgba(36, 2, 2, 0));
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  border-radius: 20px;
+  border:1px solid rgba(255, 255, 255, 0.18);
+  box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
+}
 
 .landing-banner {
-  background: url("https://wallpapers.com/images/hd/coding-background-9izlympnd0ovmpli.jpg"); /* Add your banner image URL */
+  background: url("https://wallpapers.com/images/hd/coding-background-9izlympnd0ovmpli.jpg");
 
   background-size: cover;
   background-position: center;
@@ -71,7 +89,7 @@ a:hover {
    * Dummy devices (replace them with your own or something else entirely!)
    */
 
-.product-device {
+/* .product-device {
   position: absolute;
   right: 10%;
   bottom: -30%;
@@ -99,7 +117,7 @@ a:hover {
   bottom: 0;
   left: 5%;
   background-color: #e5e5e5;
-}
+} */
 
 /*
    * Extra utilities
@@ -114,14 +132,16 @@ a:hover {
   }
 }
 
-.b-example-divider {
+/* .b-example-divider {
   height: 3rem;
   background-color: rgba(0, 0, 0, 0.1);
   border: solid rgba(0, 0, 0, 0.15);
   border-width: 1px 0;
   box-shadow: inset 0 0.5em 1.5em rgba(0, 0, 0, 0.1),
     inset 0 0.125em 0.5em rgba(0, 0, 0, 0.15);
-}
+} */
+
+
 
 .bi {
   vertical-align: -0.125em;
@@ -152,9 +172,9 @@ a:hover {
 }
 .icon-link:hover > .bi {
   transform: translate(0.25rem);
-}
+} */
 
-.icon-square {
+/* .icon-square {
   display: inline-flex;
   align-items: center;
   justify-content: center;
@@ -164,7 +184,7 @@ a:hover {
   border-radius: 0.75rem;
 }
 
-.rounded-4 {
+/* .rounded-4 {
   border-radius: 0.5rem;
 }
 .rounded-5 {
@@ -179,7 +199,7 @@ a:hover {
 }
 .text-shadow-3 {
   text-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.25);
-}
+} */ 
 
 .card-cover {
   background-repeat: no-repeat;
@@ -196,22 +216,25 @@ a:hover {
 }
 
 textarea {
-  resize: none;
+  resize: vertical;
 }
 
-.bd-placeholder-img {
+/* .bd-placeholder-img {
   font-size: 1.125rem;
   text-anchor: middle;
   -webkit-user-select: none;
   -moz-user-select: none;
   user-select: none;
-}
+} */
 
-@media (min-width: 768px) {
+/* @media (min-width: 768px) {
   .bd-placeholder-img-lg {
     font-size: 3.5rem;
   }
-}
+} */
+
+
+
 
 /* Tools/Languages Section */
 
@@ -253,8 +276,7 @@ footer {
 
 .footer-bg {
   background-color: rgba(0, 0, 0, 0.85);
-  -webkit-backdrop-filter: saturate(180%) blur(20px);
-  backdrop-filter: saturate(180%) blur(20px);
+
 }
 
 /* CARDS */
