added place holder

--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -409,7 +409,7 @@
             <div class="mb-3">
               <label for="exampleFormControlInput1" class="form-label">Email address</label>
               <!-- onkeyup = "email_validate(this)" required /" -->
-              <input type="email" class="form-control" id="email-text">
+              <input type="email" class="form-control" id="email-text" placeholder="example.email@gmail.com">
               <div class="status" id="status"></div>
             </div>
 
@@ -422,13 +422,13 @@
 
 
             <div class="mb-3">
-              <label for="exampleFormControlTextarea1" class="form-label">Your message</label>
+              <label for="exampleFormControlTextarea1" class="form-label" aria-placeholder="A">Your message</label>
               <textarea class="form-control" id="txt" rows="3"></textarea>
             </div>
 
 
             <div class="mb-3">
-              <button class="btn btn-dark rounded-3" type="submit">Submit</button>
+              <button class="btn btn-dark rounded-4" type="submit">Submit</button>
             </div>
 
           </div>
