added place holder to form, and change banner

--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -422,8 +422,8 @@
 
 
             <div class="mb-3">
-              <label for="exampleFormControlTextarea1" class="form-label" aria-placeholder="A">Your message</label>
-              <textarea class="form-control" id="txt" rows="3"></textarea>
+              <label for="exampleFormControlTextarea1" class="form-label">Your message</label>
+              <textarea placeholder="Message" class="form-control" id="txt" rows="3"></textarea>
             </div>
 
 
